@@ -51,6 +51,8 @@ using namespace sim;
 
 namespace lt = libtorrent;
 
+const int connect_socks = 2;
+
 template <typename Setup, typename HandleAlerts, typename Test>
 void run_test(
 	Setup const& setup
@@ -110,7 +112,8 @@ void run_test(
 	print_alerts(*ses[0], [=](lt::session& ses, lt::alert const* a) {
 		if (auto ta = alert_cast<lt::add_torrent_alert>(a))
 		{
-			ta->handle.connect_peer(lt::tcp::endpoint(peer1, 6881));
+			ta->handle.connect_peer(lt::tcp::endpoint(
+				(flags & connect_socks) ? proxy : peer1, 6881));
 		}
 		on_alert(ses, a);
 	});
@@ -175,6 +178,29 @@ TORRENT_TEST(socks5_tcp_connect)
 		}
 	);
 }
+
+TORRENT_TEST(socks5_tcp_accept)
+{
+	using namespace libtorrent;
+	run_test(
+		[](lt::session& ses0, lt::session& ses1)
+		{
+			// this time, the session accepting the connection is listening on a
+			// socks5 BIND session
+			settings_pack p;
+			p.set_bool(settings_pack::incoming_socks5_connections, true);
+			ses1.apply_settings(p);
+			set_proxy(ses1, settings_pack::socks5);
+			filter_ips(ses0);
+		},
+		[](lt::session& ses, lt::alert const* alert) {},
+		[](std::shared_ptr<lt::session> ses[2]) {
+			TEST_EQUAL(is_seed(*ses[0]), true);
+		},
+		connect_socks
+	);
+}
+
 
 TORRENT_TEST(encryption_tcp)
 {
